# opus-tools

./: .appveyor.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  COPYING  Makefile.am  Makefile.unix  README.md  appveyor.yml  autogen.sh  configure.ac  opus-tools.sln  opusdec.vcxproj  opusdec.vcxproj.filters  opusenc.vcxproj  opusenc.vcxproj.filters  opusinfo.vcxproj  opusinfo.vcxproj.filters
m4/: libopusenc.m4  ogg.m4  opus.m4  opusfile.m4  pkg.m4
man/: opusdec.1  opusenc.1  opusinfo.1  opusrtp.1
src/: Makefile  arch.h  audio-in.c  cpusupport.h  diag_range.c  diag_range.h  encoder.h  flac.c  flac.h  info_opus.c  info_opus.h  lpc.c  opus_header.c  opus_header.h  opusdec.c  opusdec.vcxproj  opusdec.vcxproj.filters  opusenc.c  opusenc.h  opusenc.vcxproj  opusenc.vcxproj.filters  opusinfo.c  opusinfo.h  opusinfo.vcxproj  opusinfo.vcxproj.filters  opusrtp.c  picture.c  picture.h  resample.c  resample_sse.h  stack_alloc.h  tagcompare.c  tagcompare.h  unicode_support.c  unicode_support.h  wav_io.c  wav_io.h  wave_out.c  wave_out.h
win32/: .gitignore  config.h  genversion.bat  unicode_support.c  unicode_support.h  version.h
win32/VS2010/: opus-tools.sln  opusdec.vcxproj  opusdec.vcxproj.filters  opusenc.vcxproj  opusenc.vcxproj.filters  opusinfo.vcxproj  opusinfo.vcxproj.filters
win32/VS2015/: common.props  generate_version.vcxproj  opus-tools.props  opus-tools.sln  opusdec.vcxproj  opusdec.vcxproj.filters  opusenc.vcxproj  opusenc.vcxproj.filters  opusinfo.vcxproj  opusinfo.vcxproj.filters
